# a11y-expert-mcp

./: README.md  pyproject.toml
knowledge/: Image_labeling.instructions.md  accessibility.instructions.md  accordion.instructions.md  alert.instructions.md  alertdialog.instructions.md  breadcrumbs.instructions.md  buttons.instructions.md  carousel.instructions.md  checkbox.instructions.md  combobox.instructions.md  dialog-modal.instructions.md  disclosure.instructions.md  feed.instructions.md  grid.instructions.md  headings.instructions.md  landmarks.instructions.md  link.instructions.md  listbox.instructions.md  menu-button.instructions.md  menu.instructions.md  meter.instructions.md  radio.instructions.md  slider-multithumb.instructions.md  slider.instructions.md  spinbutton.instructions.md  switch.instructions.md  tables.instructions.md  tabs.instructions.md  toolbar.instructions.md  tooltip.instructions.md  treegrid.instructions.md  treeview.instructions.md  windowsplitter.instructions.md
src/a11y_expert_mcp/: __init__.py  server.py
